// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crewdress.js - {"bogus1":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus1: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
  ? {
    spaceSuit: 3,
    oxygenCylinders: 6
  }
  : {
    shirts: 3,
    paints: 3
  };

================================================================================
`;

exports[`crewdress.js - {"bogus2":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus2: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
    ? {
        spaceSuit: 3,
        oxygenCylinders: 6
    }
    : {
        shirts: 3,
        paints: 3
    };

================================================================================
`;

exports[`crewdress.js - {"bogus3":true,"useTabs":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus3: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
	? {
		spaceSuit: 3,
		oxygenCylinders: 6
	}
	: {
		shirts: 3,
		paints: 3
	};

================================================================================
`;

exports[`crewdress.js - {"useTabs":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
	? {
		spaceSuit: 3,
		oxygenCylinders: 6
	}
	: {
		shirts: 3,
		paints: 3
	};

================================================================================
`;

exports[`nested-ternary-promises.js - {"bogus1":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus1: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
    ? condition2
      ? Promise(1)
      : Promise(2)
    : condition3
      ? Promise(3)
      : Promise(4);
}

================================================================================
`;

exports[`nested-ternary-promises.js - {"bogus2":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus2: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
    return condition1
        ? condition2
            ? Promise(1)
            : Promise(2)
        : condition3
            ? Promise(3)
            : Promise(4);
}

================================================================================
`;

exports[`nested-ternary-promises.js - {"bogus3":true,"useTabs":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus3: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
	return condition1
		? condition2
			? Promise(1)
			: Promise(2)
		: condition3
			? Promise(3)
			: Promise(4);
}

================================================================================
`;

exports[`nested-ternary-promises.js - {"useTabs":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
	return condition1
		? condition2
			? Promise(1)
			: Promise(2)
		: condition3
			? Promise(3)
			: Promise(4);
}

================================================================================
`;

exports[`nesting-object-ternary-expression.js - {"bogus1":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus1: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
alice
  ? {
      beth: {
          carol: 101
        }
        ? {
            debbie: 202
          }
          ? {
              ellen: 303
            }
          : 404
        : 505
    }
    ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
  : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201

=====================================output=====================================
alice
  ? {
    beth: {
      carol: 101
    }
      ? {
        debbie: 202
      }
        ? {
          ellen: 303
        }
        : 404
      : 505
  }
    ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
  : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201;

================================================================================
`;

exports[`nesting-object-ternary-expression.js - {"bogus2":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus2: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
alice
  ? {
      beth: {
          carol: 101
        }
        ? {
            debbie: 202
          }
          ? {
              ellen: 303
            }
          : 404
        : 505
    }
    ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
  : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201

=====================================output=====================================
alice
    ? {
        beth: {
            carol: 101
        }
            ? {
                debbie: 202
            }
                ? {
                    ellen: 303
                }
                : 404
            : 505
    }
        ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
        : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201;

================================================================================
`;

exports[`nesting-object-ternary-expression.js - {"bogus3":true,"useTabs":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus3: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
alice
  ? {
      beth: {
          carol: 101
        }
        ? {
            debbie: 202
          }
          ? {
              ellen: 303
            }
          : 404
        : 505
    }
    ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
  : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201

=====================================output=====================================
alice
	? {
		beth: {
			carol: 101
		}
			? {
				debbie: 202
			}
				? {
					ellen: 303
				}
				: 404
			: 505
	}
		? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
		: loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
	: loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201;

================================================================================
`;

exports[`nesting-object-ternary-expression.js - {"useTabs":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
alice
  ? {
      beth: {
          carol: 101
        }
        ? {
            debbie: 202
          }
          ? {
              ellen: 303
            }
          : 404
        : 505
    }
    ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
  : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201

=====================================output=====================================
alice
	? {
		beth: {
			carol: 101
		}
			? {
				debbie: 202
			}
				? {
					ellen: 303
				}
				: 404
			: 505
	}
		? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101
		: loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102
	: loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201;

================================================================================
`;

exports[`nesting-ternary-arrays.js - {"bogus1":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus1: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
alice
  ? [
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
      [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202,
      ]
        ? [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302,
          ]
        : [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402,
          ],
    ]
      ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
      : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
  : 1000

=====================================output=====================================
alice
  ? [
    loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
    loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
    [
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202
    ]
      ? [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302
      ]
      : [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402
      ]
  ]
    ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
    : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
  : 1000;

================================================================================
`;

exports[`nesting-ternary-arrays.js - {"bogus2":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus2: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
alice
  ? [
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
      [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202,
      ]
        ? [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302,
          ]
        : [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402,
          ],
    ]
      ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
      : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
  : 1000

=====================================output=====================================
alice
    ? [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
        [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202
        ]
            ? [
                loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
                loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302
            ]
            : [
                loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
                loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402
            ]
    ]
        ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
        : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
    : 1000;

================================================================================
`;

exports[`nesting-ternary-arrays.js - {"bogus3":true,"useTabs":true,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bogus3: true
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
alice
  ? [
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
      [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202,
      ]
        ? [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302,
          ]
        : [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402,
          ],
    ]
      ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
      : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
  : 1000

=====================================output=====================================
alice
	? [
		loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
		loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
		[
			loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
			loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202
		]
			? [
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302
			]
			: [
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402
			]
	]
		? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
		: loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
	: 1000;

================================================================================
`;

exports[`nesting-ternary-arrays.js - {"useTabs":true,"tabWidth":4,"offsetTernaryExpressions":true,"arrowParens":"avoid","trailingComma":"none"} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
offsetTernaryExpressions: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
trailingComma: "none"
useTabs: true
                                                                                | printWidth
=====================================input======================================
alice
  ? [
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
      loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
      [
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
        loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202,
      ]
        ? [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302,
          ]
        : [
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
            loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402,
          ],
    ]
      ? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
      : loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
  : 1000

=====================================output=====================================
alice
	? [
		loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0101,
		loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0102,
		[
			loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0201,
			loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0202
		]
			? [
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0301,
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0302
			]
			: [
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0401,
				loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0402
			]
	]
		? loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
		: loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong0501
	: 1000;

================================================================================
`;
